
* Release history

** Main branch change

- Commit range support for aider-pull-or-review-diff-file

** v0.12.2

- Feat: Prefer feature branch for code change, protect main/master/develop branch from code change
- Software planning goal has candidates for repo, file, function, region levels
- Repo evolution analysis should have more author name information
- Aider-flycheck-fix-errors-in-scope let user choose scope

** v0.12.1

- Improve accuracy of aider-expand-context-current-file
  - to skip matches in both comments and strings
  - require that the basename appears in a context that suggests it is an import or a dependency
  - ask user if test file need to be included

** v0.12.0

- File completion for /drop only list added files, addressing https://github.com/tninja/aider.el/issues/179
- Add whole git repo evolution analysis: aider-magit-log-analyze
  - Update menu item to aider-magit-blame-or-log-analyze
- Add aider-magit-setup-transients function to register Aider commands with Magit transients
- rewrite unit-tests
- Introduce shared validator functions to reduce code duplication.
- Fix: Do not run following commands if aider--send-command failed
- Fix: Object cannot be turned into regex
  - Follow up change after #178, since same error still happen sometime.
    - Make the function related to advice-add, only take effect in aider-comint-mode and won't pollute markdown-mode.
  - Addressing 1. #159; 2. MatthewZMD/aidermacs#141
- aider-add-module function have better default value for user input (suffix-input, content-regex)
- Update popular model: deepseek to DeepSeek R1 (0528)
- Feat: Software Planning on given context (file, function, region)
  - Or you can let it focus on all added files, but enter right goal
- Fix: aider-pull-or-review-diff-file should always use origin/<branch> for remote branch-scope